 * Modified tr bgcolor elements and moved them into td bgcolor blocks to help MacOS IE color table cells properly.
 * Modified view_all_bug_page to use view_all_set as a pure script to set cookies.
 * Modified g_hide_user_email to be g_show_user_email and have different usage modes.
 * Modified phpmailer AddAddress in email sending to allow for multiple to recipients.
 * Added Hungarian translation.
 * Added Japanese translation.
 * Added g_bug_link_tag to let users customize how to create bug links.
 * Added a "jump to bugnotes" quicklink at the top of the view bug pages.
 * Added a global option to control what access levels can delete bugs.
 * Added g_bug_move_access_level to control what access level can move bugs to other projects.
 * Added extra link after a bug report to go directly to the new bug.
 * Added g_close_bug_threshold for closing a bug.
 * Added print report link to view all bug page.
 * Added g_allowed_files and g_disallowed_files to control what files types may be uploaded.
 * Removed access_min and access threshold concepts from the user and project management.
 * Removed extra "echo" in news archive page.
 * Removed proj_user_delete_page.php.
 * Updated Copyright to 2002.

03.15.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.
 * Fixed small problem in all localization files (for $s_reset_request_msg).
 * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >="developer".
 * Fixed reporter poplist filter in buglist when users are assigned >="reporter" at a project and do not have default profile >="reporter".
 * Fixed summary page for "All projects" option
 * Fixed printable buglist for "All projects" option
 * Fixed document links (ChangeLog, README, etc.)
 * Fixed problem where portuguese_brazil localization did not appear correctly.