@@ -10,13 +10,23 @@
 	db_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
 	check_access( MANAGER );
 
-	# Add user to project
-	$query = "INSERT
-			INTO $g_mantis_project_user_list_table
-			(project_id, user_id, access_level)
-			VALUES
-			('$g_project_cookie_val', '$f_user_id', '$f_access_level' )";
-	$result = db_query($query);
+	# check for no users
+	if ( !isset( $f_user_id ) ) {
+		$f_user_id = "";
+	}
+
+	# Add user(s) to project
+	$result = 0;
+	$count = count( $f_user_id );
+	for ($i=0;$i<$count;$i++) {
+		$t_user_id = $f_user_id[$i];
+		$query = "INSERT
+				INTO $g_mantis_project_user_list_table
+				(project_id, user_id, access_level)
+				VALUES
+				('$g_project_cookie_val', '$t_user_id', '$f_access_level' )";
+		$result = db_query($query);
+	}
 
 	$t_redirect_url = $g_proj_user_menu_page;
 	if ( $result ) {
